--- a/Assingment-2/index.html
+++ b/Assingment-2/index.html
@@ -10,9 +10,9 @@
     <h1>CSS Challenge: Mastering Selectors</h1>
     <p>Explore the world of CSS styling!</p>
     <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
+        <li><u>Home</u></li>
+        <li><u>About</u></li>
+        <li><u>Contact</u></li>
     </ul>
     <p>Dive into contect styling</p>
     <p id="p">Inner Text</p>
